Option panel added a entry button option to invoke the control panel.
Added Slovak localization.
Optimized the options panel categories horizontal offset option, which now takes effect after adjustment.
Optimized the start money setting logic so that the start money is the value you set when you start a new game.
Fixed an issue where still catch fire after remove fires.
Updated UI style.

V0.9.8
[ADD]Added advanced option for reset mod config.
[OPT]Optimized control panel invoke speed.
[OPT]Optimized control panel toggle button UI style.
[FIX]Fixed an issue where control panel did not follow the language toggle.
[FIX]Fixed an issue where the money option in options panel could not be changed.
[UPT]Updated compatibility check.

V0.9.7
[ADD]New control panel, use default hotkey Ctrl+Shift+G or use UUI panel to invoke new control panel.
[ADD]Place unique buildings without limit features now split and integrated into control panel.
[ADD]Added fire spread control function.
[ADD]Remove fire function now split into multiple options, can control fire of different building types.
[ADD]Added Turkish localization.
[FIX]Fixed abnormal UI component location.
[UPT]Updated framework, performance improvement.
[UPT]Updated Option Panel UI components.

V0.9.6
[UPT]Updated framework.
[FIX]Fixed unavailable achievement panel in scene mode.
[OPT]Optimized the range of add cash threshold and add cash amount.

V0.9.5
[UPT]Update harmony nuget package.
[UPT]Update UI.
[ADD]Add Brazilian localization support.

V0.9.4
[UPT]Support for game version 1.16
[ADD]Now support unlimited placement of campus buildings and stock exchanges.

V0.9.3
[FIX]Remove Fire function should now work properly.
[ADJ]Adjust initial cash adjustable range.
[OPT]Optimize a potential texture loading slowness issue to improve the speed of the options panel opening.
[ADD]Add French localization support.

V0.9.2
[OPT]Optimize compatibility detection method and improve compatibility with Loading Order Tool.