@@ -8,6 +8,7 @@ Added Slovak localization.
 Optimized the options panel categories horizontal offset option, which now takes effect after adjustment.
 Optimized the start money setting logic so that the start money is the value you set when you start a new game.
 Fixed an issue where still catch fire after remove fires.
+Updated framework.
 Updated UI style.
 
 V0.9.8
